fixed gap on homepage

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,10 @@
     text-transform: uppercase;
 }
 
+.text {
+    margin-top: 0;
+}
+
 /* index. html: welcome card*/
 
 #hero-image {
